# solana-vrf

./: README.md
rust/examples/cpi/: Anchor.toml
rust/examples/cpi/programs/russian-roulette/: Cargo.toml
rust/examples/cpi/programs/russian-roulette/src/: lib.rs  state.rs
rust/examples/cpi/tests/: russian-roulette.ts
rust/examples/off-chain/: Cargo.toml
rust/sdk/: Cargo.toml
